--- a/estilos/style.css
+++ b/estilos/style.css
@@ -55,3 +55,14 @@ section#login> div#formulario{
     padding: 10px;
 
 }
+
+div#formulario>h1{
+    text-align: center;
+    margin-bottom: 10px;
+    color: #5f2c82;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.340);
+}
+
+div#formulario>p{
+    font-size: 0.8em;   
+}
