--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,7 @@ main{
 section#login{
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     position: absolute;
     top: 50%;
@@ -59,10 +59,67 @@ section#login> div#formulario{
 div#formulario>h1{
     text-align: center;
     margin-bottom: 10px;
+    font-size: 2em;
     color: #5f2c82;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.340);
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.349);
 }
 
 div#formulario>p{
     font-size: 0.8em;   
+}
+
+form>div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    font-weight: bold;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d ;
+    color: white;
+    border:none;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+form > input[type=submit]:hover{
+    background-color: #2d5f5d;
+    cursor: pointer;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    font-weight: bold;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px; 
+    background-color: white ;
+    color: #2d5f5d;
+    border: 1px solid #2d5f5d;  
+    text-decoration: none;
+    border-radius: 5px; 
+}
+
+form > a.botao:hover{ 
+    background-color: #49a09d ;
+    color: white;
+}
+
+form > a.botao > span{
+    font-size: 1em;
 }
